package com.lucifer.A06_Builder.origin;

public class client {
    public static void main(String[] args) {
        commonHouse commonHouse = new commonHouse();
        commonHouse.build();
    }
}
